crates/main/amethystate/tests/snapshots/atomic_write__open_refused_by_a_directory_redb.snap
---
source: crates/main/amethystate/tests/atomic_write.rs
expression: shape(&report)
---
the store could not be opened
├╴store: <store>
│
╰─▶ I/O error: <what the platform said>
