crates/main/amethystate/tests/snapshots/atomic_write__open_refused_by_a_directory_toml.snap
---
source: crates/main/amethystate/tests/atomic_write.rs
expression: shape(&report)
---
the store could not be opened
├╴store: <store>
├╴role: the store's data
│
├─▶ Text store IO error: Access is denied. (os error 5)
│
╰─▶ Access is denied. (os error 5)
